# traffic-ai-assistant

./: .gitignore  CLAUDE.md  README.md
traffic-ai-assistant-Bg/: README.md  main.py  pyproject.toml
traffic-ai-assistant-Bg/app/: config.py  main.py  testStream.py
traffic-ai-assistant-Bg/app/api/: chat.py  health.py  index.py
traffic-ai-assistant-Bg/app/graphs/: agent_graph.py  edges.py  nodes.py  state.py
traffic-ai-assistant-Bg/app/models/: schemas.py
traffic-ai-assistant-Bg/app/prompts/: templates.py
traffic-ai-assistant-Bg/app/services/: chat_service.py  index_service.py  llm_factory.py
traffic-ai-assistant-Bg/app/tools/: law_search.py  penalty_query.py
traffic-ai-assistant-Bg/app/vectorstore/: chroma.py  embeddings.py
traffic-ai-assistant-Bg/data/: 《道路交通安全法实施条例》.wps
traffic-ai-assistant-Bg/scripts/: run_chroma.py
traffic-ai-assistant-frontend/: README.md  package-lock.json  package.json
traffic-ai-assistant-frontend/src/: App.vue
traffic-ai-assistant-frontend/src/api/: index.js
traffic-ai-assistant-frontend/src/assets/styles/: bmw.css
traffic-ai-assistant-frontend/src/components/: ChatInput.vue  ChatMessage.vue  ChatWindow.vue
